Fix link button text alignment in Chrome

--- a/app/assets/stylesheets/frontend/forms.scss
+++ b/app/assets/stylesheets/frontend/forms.scss
@@ -135,7 +135,7 @@ form {
   color: $white;
   display: inline-block;
   font-size: 1.125rem;
-  line-height: 1;
+  line-height: 1.25;
   font-family: $futura-bold;
   font-weight: normal;
   height: 56px;
